--- a/styles/index.css
+++ b/styles/index.css
@@ -26,7 +26,7 @@ p {
 
 /*navegador*/
 
-.nav__ul li{
+.nav__ul li {
     margin-left: 5px;
 }
 
@@ -41,31 +41,101 @@ p {
 
 /* contenido */
 
+
+.italic {
+    font-style: italic;
+    font-weight: 500;
+}
+
+/* Movile */
+
+.portada {
+
+    background: linear-gradient(to right, #ffffffe2 30%, #ffffff00), url(../assets/img/tres-riccios.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: right;
+    padding: 2rem;
+    text-shadow: 2px 4px 10px #fff, -2px -4px 10px #fff;
+}
+
+h1 {
+    font-weight: 700;
+}
+
+.portada p {
+    width: 75%;
+    margin-top: 1em;
+    font-size: 1.5rem;
+    font-weight: 600;
+
+}
+
+
+
+.section__div {
+    width: 100%;
+    padding: 2rem;
+    background: linear-gradient(to bottom, #fff0d9e9, #faefe6 25%, #ffffff00);
+    color: #1e1e1e;   
+}
+
+.descripcion a {
+    color: #1e1e1e;
+}
+
+.descripcion a.focus {
+    color: #0054ba;
+}
+
+p.italic {
+    padding: 10px;
+    background-color: #ffe9d8e6;
+    border-radius: 10px;
+}
+
+.abajo {
+    position: relative;
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+    background-color: #000;
+}
+
+.boton_la-orquesta {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 50px;
+    margin: auto;
+    width: 300px;
+    border-radius: 5px;
+    background-color: #2e4eeccc;
+    text-align: center;
+    padding: 5px;
+}
+
+.boton_la-orquesta a {
+    text-decoration: none;
+    color: #fff9f4;
+    font-size: 3em;
+}
+
+/*Pantallas a partir de 576px*/
+
 @media screen and (min-width: 980px) {
 
 
-    body{
+    body {
         background: linear-gradient(to right, #ffffff 30%, #ffffff00), url(../assets/img/tres-riccios.jpg);
         background-size: contain;
         background-repeat: no-repeat;
         background-position: top;
-   }
-    
-}
-
-@media screen and (max-width: 979px) {
-
-    .portada {
-       
-        background: linear-gradient(to right, #ffffffe2 30%, #ffffff00), url(../assets/img/tres-riccios.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: right;
-        
-    
     }
-    
+
 }
+
+
 
 @media screen and (min-width: 576px) {
 
@@ -78,23 +148,23 @@ p {
         background-repeat: no-repeat;
         background-position: right;
         font-weight: 600;
-        text-shadow: 2px 2px 10px #fff, -2px -2px 10px #fff; 
-    
+        
+
     }
-    
+
     h1 {
         margin: 100px 20px 50px;
         font-size: 2rem;
         line-height: 1em;
-        
+
     }
-    
+
     .portada p {
         margin-top: 1em;
-        font-size: 1.5rem;  
-        
+        font-size: 1.5rem;
+
     }
-    
+
     .portada-texto {
         width: 50%;
         min-width: 400px;
@@ -104,96 +174,53 @@ p {
         line-height: 1.5em;
         color: #1e1e1e;
     }
-    
-    
+
+
     /* secciones */
-    
-    
+
+
     .section__div {
         width: 100%;
         margin: auto;
         background: linear-gradient(to bottom, #fff0d9e9, #faefe6 25%, #ffffff00);
         color: #1e1e1e;
-        
+
     }
-    
+
     .section__div h2 {
         font-size: 2em;
     }
-    
+
     .descripcion {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        
+
     }
-    
+
     .descripcion-texto {
         width: 50%;
-        min-width: 400px
+        min-width: 600px
     }
-    
+
     .descripcion-texto p {
         margin-top: 2em;
         font-size: 1.5em;
     }
-    
-    .clasesmusica-texto a {
-        border-radius: 10px;
-        color: #faefe6;
-        background-color: #0054ba;
-        padding: 5px;
-    }
-    
+
     
     .descripcion-img {
         float: right;
         width: 500px;
-        margin: 0;
+        margin: 20px;
     }
+
+    
+
     .descripcion-img img {
         width: 100%;
     }
-    
-    .italic {
-        font-style: italic;
-    }
-    
-    .abajo {
-        position: relative;
-        width: 100%;
-        height: 600px;
-        overflow: hidden;
-        background-color: #000;
-    
-    
-    }
-    
-    .boton_la-orquesta {
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 50px;
-        margin: auto;
-        width: 300px;
-        border-radius: 5px;
-        background-color: #2e4eeccc;
-        text-align: center;
-        padding: 5px;
-    }
-    
-    .boton_la-orquesta a {
-        text-decoration: none;
-        color: #fff9f4;
-        font-size: 3em;
-    }
-    
-    .abajo img {
-        width: 100%;
-        object-fit: cover;
-        object-position: center;
-    
-    }
-    
+
+
 }
