--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -1,3 +1,25 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/*
+color 1 -> #fff0d9
+color 2 -> #d9e8ff 
+color 3? -> #FFA317
+color 3? -> #9D1B27
+*/
+
+/*fuentes*/
+
+h1,
+h2,
+h3 {
+    font-family: 'Libre Franklin', sans-serif;
+}
+
+
 body {
    
     background-image: url(../assets/img/tres-riccios.jpg);
@@ -24,12 +46,7 @@ body {
 
 
 
-h1, 
-h2, 
-h3 {
-    font-family: 'Libre Franklin', sans-serif;
 
-}
 
 h1 {
     
@@ -52,7 +69,8 @@ form {
 }
 
 form input::placeholder {
-    color: #000;
+    color: #5e5e5e;
+    font-style: italic;
 }
 
 
@@ -102,7 +120,23 @@ input[type="submit"] {
     border-radius: 10px;
     background-color: #0054ba;
     color: #fff;
-
-
     
+}
+
+.contacto_ul {
+    display: inline-block;
+    background-color: #fff0d9;
+    padding: 20px;
+    border-radius: 0 10px 10px 0;
+    box-shadow: 4px 4px 10px #000;
+}
+
+.contacto_ul a {
+    text-decoration: none;
+    color: #000;
+}
+
+.contacto_ul li {
+    list-style: none;
+    margin: 10px;
 }
