--- a/styles/actividades.css
+++ b/styles/actividades.css
@@ -1,3 +1,45 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/*
+color 1 -> #fff0d9
+color 2 -> #d9e8ff 
+*/
+
+/*fuentes*/
+
+h1,
+h2,
+h3 {
+    font-family: 'Libre Franklin', sans-serif;
+}
+
+p {
+    font-family: 'Arimo', sans-serif;
+}
+
+
+/*navegador*/
+
+.nav__ul li{
+    margin-left: 5px;
+}
+
+.nav__ul li a:hover {
+    color: #000;
+    text-shadow: 1px 1px 10px #212121;
+}
+
+.activo {
+    text-decoration: underline;
+}
+
+/*body*/
+
+
 
 
 .portada {
@@ -13,7 +55,7 @@
 
 h1 {
     margin: 50px;
-    
+    font-weight: 700;
 
 }
 
