--- a/styles/orquesta.css
+++ b/styles/orquesta.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+/*
+color 1 -> #fff0d9
+color 2 -> #d9e8ff 
+*/
+
 /*fuentes*/
 
 h1,
@@ -19,13 +24,15 @@ p {
 
 /*navegador*/
 
-.nav__ul li{
+.nav__ul li {
     margin-left: 5px;
+    
 }
 
 .nav__ul li a:hover {
     color: #000;
     text-shadow: 1px 1px 10px #212121;
+    
 }
 
 .activo {
@@ -34,107 +41,58 @@ p {
 
 /* contenido */
 
-@media screen and (min-width: 980px) {
-
-
-    body{
-        background: linear-gradient(to right, #ffffff 30%, #ffffff00), url(../assets/img/tres-riccios.jpg);
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: top;
-   }
-    
-}
-
-@media screen and (max-width: 979px) {
-
-    .portada {
-       
-        background: linear-gradient(to right, #ffffff 30%, #ffffff00), url(../assets/img/tres-riccios.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: right;
-        
-    
-    }
-    
-}
-
-
-
-h1,
-h2,
-h3 {
-    font-family: 'Libre Franklin', sans-serif;
-}
-
-p {
-    font-family: 'Arimo', sans-serif;
-}
-
-
-
 .portada {
-    width: 100%;
-    margin: 0 auto;
-    padding: 5px;
+
+    background: linear-gradient(to right, #ffffffe2 30%, #ffffff00), url(../assets/img/tres-riccios.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: right;
-    font-weight: 600;
-
+    padding: 32px;
+    text-shadow: 2px 4px 10px #fff, -2px -4px 10px #fff;
 }
 
-.portada-texto {
-    width: 50%;
-    min-width: 400px;
-    margin: 10px 10px 60px 70px;
-    padding-left: 20px;
-    text-align: left;
-    line-height: 1.5em;
-    color: #1e1e1e;
-}
 
 h1 {
+    font-weight: 700;
     margin: 100px 20px 50px;
     font-size: 2rem;
     line-height: 1em;
-    }
-
-.portada-texto p {
-margin-top: 1em;
-   font-size: 1.2rem;
 }
 
-.orquesta__section {
+
+.portada p {
+    width: 75%;
+    margin-top: 16px;
+    padding: 10px;
+    font-size: 1.2rem;
+    font-weight: 600;
+    background-color: #fff0d9c8 ;
+    border-radius: 10px;
+}
+
+.text__section {
     width: 100%;
-    margin: 0 auto;
-    margin: auto;
-    padding: 5em;
+    background: linear-gradient(to bottom, #fff0d9e9, #faefe6 25%, #ffffff00); 
+    padding: 50px 20px;
     font-weight: 600;
     line-height: 1.5em;
-    background: linear-gradient(to bottom, #fff0d99c, #faefe6 25%, #ffffff00);
     color: #1e1e1e;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
-.orquesta__section p {
-    width: 70%;
-    margin: 2em;
-}
 
-.historia__img {
-    width: 100%;
+.orquesta__img {
+    margin: 20px;
+    width: 95%;
     display: flex;
     justify-content: center;
-    
+
 }
 
-.historia__img img {
+.orquesta__img img {
     width: 85%;
-    max-width: 800px;
     min-width: 500px;
-    
+    box-shadow: 0 0 5px #000;
 }
 
 .video {
@@ -146,11 +104,67 @@ margin-top: 1em;
 
 .iframe {
     margin: 20px;
-    width: 40%;
+    width: 45%;
     min-width: 300px;
     height: 300px;
 }
- iframe {
+
+iframe {
     width: 100%;
     height: 300px;
- }
+}
+
+
+
+/*pantallas a partir de 980px */
+
+@media screen and (min-width: 980px) {
+
+
+    body {
+        background: linear-gradient(to right, #ffffff 30%, #ffffff00), url(../assets/img/tres-riccios.jpg);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: top;
+    }
+
+    .portada {
+        background: linear-gradient(to right, #ffffffe2 30%, #ffffff00);
+        width: 100%;
+        margin: 0 auto;
+        padding: 5px;
+        font-weight: 600;
+    }
+
+
+    .portada-texto {
+        width: 70%;
+        min-width: 400px;
+        margin: 10px 10px 60px 70px;
+        padding-left: 20px;
+        text-align: left;
+        line-height: 2rem;
+        color: #1e1e1e;
+    } 
+    
+
+    .portada-texto p {
+        margin-top: 1em;
+        font-size: 1.3rem;
+        
+    }
+
+    .text__section {
+        margin: 0 auto;
+        margin: auto;
+        padding: 5em;
+        font-size: 1.2rem;
+    }
+
+
+    .text__section p {
+        width: 70%;
+        margin: 2em;
+    }
+
+}
