--- a/styles/orquesta.css
+++ b/styles/orquesta.css
@@ -24,6 +24,12 @@ p {
 
 /*navegador*/
 
+header {
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+}
+
 .nav__ul li {
     margin-left: 5px;
     
