--- a/styles/actividades.css
+++ b/styles/actividades.css
@@ -22,12 +22,12 @@ p {
 }
 
 
-h1 {
-    font-weight: 700;
-}
 
 
 /*navegador*/
+header {
+    background-color: #fff;
+}
 
 .nav__ul li{
     margin-left: 5px;
@@ -48,13 +48,11 @@ h1 {
 .second-nav {
     position: sticky;
     top: 0;
-    background-color: #fff0d9;
+    background: linear-gradient(to right, #fff0d9 50%, #fff0d99e );
     z-index: 10;
+    box-shadow: 0 2px 10px #000;
 }
 
-.second-nav ul {
-    display: flex;
-    }
 
 .second-nav ul li {
     padding: 10px ;
@@ -64,36 +62,107 @@ h1 {
 .second-nav ul li a{
     text-decoration: none;
     color: #212121;
+    font-weight: 600;
 }
 
 /*body*/
 
-
-
-
 .portada {
-    width: 85%;
-    margin: 0 auto;
-    height: auto;
-    padding: 5px;
-    background: linear-gradient(to right, #ffffff 15%, #ffffff8e 50%, #ffffff00), url(../assets/img/tres-riccios.jpg);
+
+    background: linear-gradient(to right, #ffffffe2 30%, #ffffff00), url(../assets/img/tres-riccios.jpg);
     background-size: cover;
-    background-position: right;
     background-repeat: no-repeat;
+    background-position: right;
+    padding: 32px;
+    text-shadow: 2px 4px 10px #fff, -2px -4px 10px #fff;
 }
+
 
 h1 {
-    margin: 50px;
     font-weight: 700;
-
+    margin: 100px 20px 50px;
+    font-size: 2rem;
+    line-height: 1em;
 }
 
-.description {
-    width: 50%;
-    margin: 10px;
-    text-align: left;
+
+.portada p {
+    width: 75%;
+    margin-top: 16px;
+    padding: 10px;
+    font-size: 1.2rem;
+    font-weight: 600;
+    background-color: #fff0d9c8 ;
+    border-radius: 10px;
+}
+
+.text__section {
+    width: 100%;
+    background: linear-gradient(to bottom, #fff0d9e9, #faefe6 25%, #ffffff00); 
+    padding: 50px 20px;
+    font-weight: 600;
+    line-height: 1.5em;
+    color: #1e1e1e;
+    font-size: 1rem;
+}
+
+/*pantallas a partir de 980px */
+
+@media screen and (min-width: 980px) {
+
+    .second-nav ul {
+        display: flex;
+    }
+
+    body {
+        background: linear-gradient(to right, #ffffff 30%, #ffffff00), url(../assets/img/tres-riccios.jpg);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: top;
+    }
+
+    .portada {
+        background: linear-gradient(to right, #ffffffe2 30%, #ffffff00);
+        width: 100%;
+        margin: 0 auto;
+        padding: 5px;
+        font-weight: 600;
+    }
+
+
+    .portada-texto {
+        width: 70%;
+        min-width: 400px;
+        margin: 10px 10px 60px 70px;
+        padding-left: 20px;
+        text-align: left;
+        line-height: 2rem;
+        color: #1e1e1e;
+    } 
     
+
+    .portada-texto p {
+        margin-top: 1em;
+        font-size: 1.3rem;
+        
+    }
+
+    .text__section {
+        margin: 0 auto;
+        margin: auto;
+        padding: 5em;
+        font-size: 1.2rem;
+    }
+
+
+    .text__section p {
+        width: 70%;
+        margin: 2em;
+    }
+
 }
+
+
 
 /*estilos del carousel*/
 
