--- a/styles/index.css
+++ b/styles/index.css
@@ -26,6 +26,12 @@ p {
 
 /*navegador*/
 
+header {
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+}
+
 .nav__ul li {
     margin-left: 5px;
 }
