comienzo a incluir sass

--- a/styles/actividades.css
+++ b/styles/actividades.css
@@ -29,6 +29,10 @@ header {
     background-color: #fff;
 }
 
+.logo img {
+    width: 200px;
+}
+
 .nav__ul li{
     margin-left: 5px;
 }
@@ -40,6 +44,10 @@ header {
 
 .activo {
     text-decoration: underline;
+}
+
+.navbar-toggler {
+    border: none;
 }
 
 /*navegador-secundario*/
