--- a/styles/contacto.css
+++ b/styles/contacto.css
@@ -28,6 +28,10 @@ header {
     background-color: #fff;
 }
 
+.logo img {
+    width: 200px;
+}
+
 .nav__ul li{
     margin-left: 5px;
 }
@@ -39,6 +43,10 @@ header {
 
 .activo {
     text-decoration: underline;
+}
+
+.navbar-toggler {
+    border: none;
 }
 
 /*body*/
