--- a/styles/cronograma.css
+++ b/styles/cronograma.css
@@ -30,6 +30,10 @@ header {
     background-color: #fff;
 }
 
+.logo img {
+    width: 200px;
+}
+
 .nav__ul li{
     margin-left: 5px;
 }
@@ -41,6 +45,10 @@ header {
 
 .activo {
     text-decoration: underline;
+}
+
+.navbar-toggler {
+    border: none;
 }
 
 /*body*/
