--- a/styles/cronograma.css
+++ b/styles/cronograma.css
@@ -57,7 +57,7 @@ h1 {
     font-weight: 700;
 }
 
-.portada {
+.portada_cronograma {
     display: flex;
     align-items: center;
 }
@@ -72,7 +72,7 @@ h1 {
         background-position: top;
    }
 
-   .portada {
+   .portada_cronograma {
     height: 300px;
     justify-content: center;
    }
@@ -83,7 +83,7 @@ h1 {
 
 @media screen and (max-width: 979px) {
 
-    .portada {
+    .portada_cronograma {
         height: 200px;
         background:  url(../assets/img/tres-riccios.jpg);
         background-size: cover;
