trabajo pasando los estilos a sass

--- a/scss/base/_colores.scss
+++ b/scss/base/_colores.scss
@@ -1,5 +1,14 @@
 $color-principal: #fff0d9;
 $color-intermedio: #faefe6;
+$color-principal-dos: #ffe9d8e6;
+
+$color-blanco: #fff;
+$color-negro: #000;
+$color-transparente: #ffffff00;
+
+$color-complementario-tr: #2e4eeccc;
+
+$color-focus: #0054ba;
 
 $color-texto: #1e1e1e;
 
