--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,7 +5,11 @@
 
 /*Componentes*/
 @import "./components/header-footer";
+@import "./components/mixins";
 
+
+@import "./index";
+@import "./contacto";
 
 h1,
 h2,
@@ -18,190 +22,3 @@ p {
     color: $color-texto;
 }
 
-
-/* contenido */
-
-
-/* Movile */
-
-.portada {
-    background: linear-gradient(to right, #ffffffe2 30%, #ffffff00), url(../assets/img/tres-riccios.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: right;
-    padding: 2rem;
-    text-shadow: 2px 4px 10px #fff, -2px -4px 10px #fff;
-
-    h1 {
-        font-weight: 700;
-    }
-
-    p {
-        width: 75%;
-        margin-top: 1em;
-        font-size: 1.5rem;
-        font-weight: 600;
-    }
-}
-
-/*Solo el INDEX */
-
-.section__div {
-    width: 100%;
-    padding: 2rem;
-    background: linear-gradient(to bottom, $color-principal, #faefe6 25%, #ffffff00);
-    color: $color-texto;
-
-    div.descripcion {
-
-        div.descripcion-texto {
-
-            p.italic {
-                padding: 10px;
-                background-color: #ffe9d8e6;
-                border-radius: 10px;
-                font-style: italic;
-                font-weight: 500;
-            }
-
-            a {
-                color: $color-texto;
-                font-style: italic;
-                font-weight: 500;
-            }
-
-            a.focus {
-                    color: #0054ba;
-            }   
-        }
-    }
-}
-
-
-
-
-.abajo {
-    position: relative;
-    width: 100%;
-    height: 600px;
-    overflow: hidden;
-    background-color: #000;
-
-    div {
-        position: absolute;
-        left: 0;
-        right: 0;
-        bottom: 50px;
-        margin: auto;
-        width: 300px;
-        border-radius: 5px;
-        background-color: #2e4eeccc;
-        text-align: center;
-        padding: 5px;
-
-        a {
-            text-decoration: none;
-            color: #fff9f4;
-            font-size: 3em;
-        }
-    }
-}
-
-
-
-
-/*Pantallas a partir de 576px*/
-
-@media screen and (min-width: 980px) {
-
-
-    body {
-        background: linear-gradient(to right, #ffffff 30%, #ffffff00), url(../assets/img/tres-riccios.jpg);
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: top;
-    }
-
-    .portada {
-        background: linear-gradient(to right, #ffffffe2 30%, #ffffff00);
-    }
-}
-
-
-
-@media screen and (min-width: 576px) {
-
-    .portada {
-        width: 100%;
-        min-height: 500px;
-        margin: 0 auto;
-        padding: 5px;
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: right;
-        font-weight: 600;
-
-        div {
-            width: 50%;
-            min-width: 400px;
-            margin: 10px 10px 60px 70px;
-            padding-left: 1.25rem;
-            text-align: left;
-            line-height: 1.5em;
-            color: $color-texto;
-
-            h1 {
-                margin: 100px 20px 50px;
-                font-size: 2rem;
-                line-height: 1em;
-            }
-
-            p {
-                margin-top: 1em;
-                font-size: 1.5rem;
-            }
-        }
-    }
-
-
-
-    /* secciones */
-
-
-    .section__div {
-        width: 100%;
-        margin: auto;
-        background: linear-gradient(to bottom, $color-principal, $color-intermedio 25%, #ffffff00);
-        color: $color-texto;
-
-        h2 {
-            font-size: 2em;
-        }
-
-        div{
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: space-evenly;
-            align-items: center;
-
-            div.descripcion-texto {
-                width: 50%;
-                min-width: 600px;
-
-                    p {
-                    margin-top: 2em;
-                    font-size: 1.5em;
-                }
-            }
-
-            div.descripcion-img {
-                width: 500px;
-                margin: 20px;
-                img {
-                    width: 100%;
-                }
-            }
-        }
-    } 
-}
