--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,38 +23,31 @@ header nav div div ul li a:hover {
   text-shadow: 1px 1px 10px #212121;
 }
 
-h1,
-h2,
-h3 {
-  font-family: "Libre Franklin", sans-serif;
-}
-
-p {
-  font-family: "Arimo", sans-serif;
-  color: #1e1e1e;
-}
-
 /* contenido */
 /* Movile */
-.portada {
+.index__portada {
   background: linear-gradient(to right, rgba(255, 255, 255, 0.8862745098) 30%, rgba(255, 255, 255, 0)), url(../assets/img/tres-riccios.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: right;
   padding: 2rem;
   text-shadow: 2px 4px 10px #fff, -2px -4px 10px #fff;
+  /*Solo el INDEX */
 }
-.portada h1 {
+.index__portada h1 {
   font-weight: 700;
+  margin: 100px 20px 50px;
+  font-size: 2rem;
+  line-height: 1em;
 }
-.portada p {
+.index__portada p {
   width: 75%;
   margin-top: 1em;
   font-size: 1.5rem;
   font-weight: 600;
 }
 
-/*Solo el INDEX */
+/*INDEX */
 .section__div {
   width: 100%;
   padding: 2rem;
@@ -75,6 +68,9 @@ p {
 }
 .section__div div.descripcion div.descripcion-texto a.focus {
   color: #0054ba;
+}
+.section__div div.descripcion div.descripcion-img {
+  margin: 20px;
 }
 
 .abajo {
@@ -98,34 +94,31 @@ p {
 }
 .abajo div a {
   text-decoration: none;
-  color: #fff9f4;
+  color: #fff;
   font-size: 3em;
 }
 
 /*Pantallas a partir de 576px*/
 @media screen and (min-width: 980px) {
   body {
-    background: linear-gradient(to right, #ffffff 30%, rgba(255, 255, 255, 0)), url(../assets/img/tres-riccios.jpg);
+    background: linear-gradient(to right, #fff 30%, rgba(255, 255, 255, 0)), url(../assets/img/tres-riccios.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: top;
   }
-  .portada {
+  .index__portada {
     background: linear-gradient(to right, rgba(255, 255, 255, 0.8862745098) 30%, rgba(255, 255, 255, 0));
   }
 }
 @media screen and (min-width: 576px) {
-  .portada {
+  .index__portada {
     width: 100%;
     min-height: 500px;
     margin: 0 auto;
     padding: 5px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: right;
     font-weight: 600;
   }
-  .portada div {
+  .index__portada div {
     width: 50%;
     min-width: 400px;
     margin: 10px 10px 60px 70px;
@@ -134,22 +127,11 @@ p {
     line-height: 1.5em;
     color: #1e1e1e;
   }
-  .portada div h1 {
-    margin: 100px 20px 50px;
-    font-size: 2rem;
-    line-height: 1em;
-  }
-  .portada div p {
+  .index__portada div p {
     margin-top: 1em;
     font-size: 1.5rem;
   }
   /* secciones */
-  .section__div {
-    width: 100%;
-    margin: auto;
-    background: linear-gradient(to bottom, #fff0d9, #faefe6 25%, rgba(255, 255, 255, 0));
-    color: #1e1e1e;
-  }
   .section__div h2 {
     font-size: 2em;
   }
@@ -166,6 +148,8 @@ p {
   }
   .section__div div div.descripcion-texto p {
     margin-top: 2em;
+    margin-left: 1em;
+    margin-right: 1em;
     font-size: 1.5em;
   }
   .section__div div div.descripcion-img {
@@ -175,6 +159,107 @@ p {
   .section__div div div.descripcion-img img {
     width: 100%;
   }
+}
+/*body*/
+.contacto__body {
+  background-image: url(../assets/img/tres-riccios.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+}
+.contacto__body h1 {
+  font-weight: 700;
+}
+
+@media screen and (min-width: 620px) {
+  .contacto__body {
+    background-image: url(../assets/img/tres-riccios.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+  }
+  .contacto__body h1 {
+    text-align: center;
+    text-shadow: 2px 2px 10px #fff, -2px -2px 10px #fff;
+  }
+}
+form {
+  margin: 25px auto;
+  width: 90%;
+  max-width: 500px;
+  padding: 1em;
+  border: 1px solid rgba(0, 0, 0, 0.4666666667);
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.8666666667);
+  font-family: "Arimo", sans-serif;
+}
+form input ::placeholder {
+  color: #5e5e5e;
+  font-style: italic;
+}
+form input.datoscontacto {
+  padding: 10px;
+  font-weight: 600;
+  margin: 1em;
+  display: block;
+  width: auto;
+}
+form div.form__div-checkbox {
+  margin: 1em;
+  padding: 1em;
+}
+form div.form__div-checkbox h2 {
+  margin-bottom: 1em;
+}
+form div.form__div-checkbox input {
+  margin: 0.5em;
+}
+form label.mensaje {
+  margin-left: 1em;
+  font-weight: 600;
+}
+form textarea {
+  padding: 10px;
+  font-weight: 600;
+  margin: 1em;
+  margin-top: 0;
+  display: block;
+  width: 95%;
+  height: 6em;
+}
+form input[type=submit] {
+  padding: 10px;
+  font-weight: 600;
+  border-radius: 10px;
+  background-color: #0054ba;
+  color: #fff;
+}
+
+.contacto_ul {
+  display: inline-block;
+  background-color: #fff0d9;
+  padding: 20px;
+  border-radius: 0 10px 10px 0;
+  box-shadow: 4px 4px 10px #000;
+}
+.contacto_ul li {
+  list-style: none;
+  margin: 10px;
+}
+.contacto_ul a {
+  text-decoration: none;
+  color: #000;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Libre Franklin", sans-serif;
+}
+
+p {
+  font-family: "Arimo", sans-serif;
+  color: #1e1e1e;
 }
 
 /*# sourceMappingURL=styles.css.map */
