--- a/styles/styles.css
+++ b/styles/styles.css
@@ -251,6 +251,107 @@ form input[type=submit] {
   color: #000;
 }
 
+.orquesta__portada {
+  background: linear-gradient(to right, rgba(255, 255, 255, 0.8862745098) 30%, rgba(255, 255, 255, 0)), url(../assets/img/tres-riccios.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+  padding: 2rem;
+  text-shadow: 2px 4px 10px #fff, -2px -4px 10px #fff;
+}
+.orquesta__portada h1 {
+  font-weight: 700;
+  margin: 100px 20px 50px;
+  font-size: 2rem;
+  line-height: 1em;
+}
+.orquesta__portada div.portada-texto p {
+  width: 75%;
+  margin-top: 16px;
+  padding: 10px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  background-color: #faefe6;
+  border-radius: 10px;
+}
+
+.text__section {
+  width: 100%;
+  background: linear-gradient(to bottom, #fff0d9, #faefe6 25%, rgba(255, 255, 255, 0));
+  padding: 50px 20px;
+  font-weight: 600;
+  line-height: 1.5em;
+  color: #1e1e1e;
+  font-size: 1rem;
+}
+.text__section div.orquesta__img {
+  margin: 20px;
+  width: 95%;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+.text__section div.orquesta__img img {
+  width: 85%;
+  min-width: 400px;
+  box-shadow: 0 0 5px #000;
+}
+.text__section div.video {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 10px;
+}
+.text__section div.video div.iframe {
+  margin: 20px;
+  width: 45%;
+  min-width: 300px;
+  height: 300px;
+}
+.text__section div.video div.iframe iframe {
+  width: 100%;
+  height: 300px;
+}
+
+/*pantallas a partir de 980px */
+@media screen and (min-width: 980px) {
+  body {
+    background: linear-gradient(to right, #ffffff 30%, rgba(255, 255, 255, 0)), url(../assets/img/tres-riccios.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top;
+  }
+  body .orquesta__portada {
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.8862745098) 30%, rgba(255, 255, 255, 0));
+    width: 100%;
+    margin: 0 auto;
+    padding: 5px;
+    font-weight: 600;
+  }
+  body .orquesta__portada div.portada-texto {
+    width: 70%;
+    min-width: 400px;
+    margin: 10px 10px 60px 70px;
+    padding-left: 20px;
+    text-align: left;
+    line-height: 2rem;
+    color: #1e1e1e;
+  }
+  body .orquesta__portada div.portada-texto p {
+    margin-top: 1em;
+    font-size: 1.3rem;
+  }
+  .text__section {
+    margin: 0 auto;
+    margin: auto;
+    padding: 5em;
+    font-size: 1.2rem;
+  }
+  .text__section p {
+    width: 70%;
+    margin: 2em;
+  }
+}
 h1,
 h2,
 h3 {
