--- a/scss/components/_header-footer.scss
+++ b/scss/components/_header-footer.scss
@@ -14,7 +14,7 @@ header {
 
             }
 
-            button {
+            button.navbar-toggler {
                 border: none;
             }
 
