--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -14,6 +14,14 @@
     }
 }
 
+
+@mixin portada-p ($font-size: 1.5rem) {
+    width: 75%;
+    margin-top: 1em;
+    font-size: $font-size;
+    font-weight: 600;
+}
+
 @mixin flex ($flex-direction : row,
     $flex-wrap : wrap,
     $justify-content : center,
