--- a/styles/styles.css
+++ b/styles/styles.css
@@ -360,9 +360,12 @@ form input[type=submit] {
 .second-nav {
   position: sticky;
   top: 0;
-  background: linear-gradient(to right, #fff0d9 50%, rgba(255, 240, 217, 0.6196078431));
+  background: linear-gradient(to right, #fff 50%, rgba(255, 255, 255, 0));
   z-index: 10;
   box-shadow: 0 2px 10px #000;
+}
+.second-nav ul {
+  list-style: none;
 }
 .second-nav ul li {
   padding: 10px;
@@ -399,13 +402,17 @@ form input[type=submit] {
   color: #1e1e1e;
   font-size: 1rem;
 }
-.text__section h3 {
-  text-align: center;
+.text__section h2 {
   margin-bottom: 100px;
 }
+.text__section h3 {
+  text-align: center;
+  margin: 100px auto;
+}
 .text__section p {
+  margin: 10px;
   width: 70%;
-  margin: 2em;
+  min-width: 250px;
 }
 .text__section p a {
   font-style: italic;
@@ -415,6 +422,7 @@ form input[type=submit] {
   color: #0054ba;
 }
 .text__section ul {
+  margin-left: 50px;
   margin-bottom: 100px;
 }
 .text__section div {
@@ -424,10 +432,11 @@ form input[type=submit] {
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
+  margin-bottom: 50px;
 }
 .text__section div p {
   width: 50%;
-  min-width: 420px;
+  min-width: 250px;
 }
 .text__section div .actividades__img {
   width: 40%;
