--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-position: right;
     padding: 2rem;
-    text-shadow: 2px 4px 10px #fff, -2px -4px 10px #fff;
+    text-shadow: 2px 4px 10px $color-blanco, -2px -4px 10px $color-blanco;
 
     h1 {
         font-weight: 700;
