--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -9,9 +9,10 @@
 
 
 @import "./index";
-@import "./contacto";
 @import "./orquesta";
 @import "./actividades";
+@import "./cronograma";
+@import "./contacto";
 
 h1,
 h2,
