--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -13,6 +13,7 @@
 
     h1 {
         font-weight: 700;
+        margin-left: 50px;
     }
 
 
@@ -29,7 +30,7 @@
 
         h1 {
             text-align: center;
-            text-shadow: 2px 2px 10px #fff, -2px -2px 10px #fff;
+            text-shadow: 2px 2px 10px $color-blanco, -2px -2px 10px $color-blanco;
         }
     }
 
@@ -95,31 +96,23 @@ form {
         font-weight: 600;
         border-radius: 10px;
         background-color: $color-focus;
-        color: #fff;
+        color: $color-blanco;
+        
     }
+    
 
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 .contacto_ul {
     display: inline-block;
-    background-color: #fff0d9;
+    background-color: $color-principal;
     padding: 20px;
     border-radius: 0 10px 10px 0;
-    box-shadow: 4px 4px 10px #000;
+    box-shadow: 4px 4px 10px $color-negro;
+    transition: box-shadow 1s;
+
 
     li {
         list-style: none;
@@ -128,6 +121,10 @@ form {
 
     a {
         text-decoration: none;
-        color: #000;
+        color: $color-negro;
     }
+}
+
+.contacto_ul:hover {
+    box-shadow: 4px 4px 10px $color-blanco;
 }
